clusters/app.ci/assets/ship-help-bot.yaml
kind: List
apiVersion: v1
items:
- kind: ServiceAccount
  apiVersion: v1
  metadata:
    name: ship-help-bot
    namespace: ci
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    namespace: ci
    name: ship-help-bot
  spec:
    port:
      targetPort: 8888
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: ship-help-bot
- apiVersion: v1
  kind: Service
  metadata:
    namespace: ci
    name: ship-help-bot
    labels:
      app: ship-help-bot
    annotations:
      prometheus.io/scrape: "true"
      prometheus.io/port: "8888"
  spec:
    selector:
      app: ship-help-bot
    ports:
    - name: main
      port: 8888
      targetPort: 8888
    - name: metrics
      port: 9090
      protocol: TCP
      targetPort: 9090
    type: ClusterIP
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    namespace: ci
    name: ship-help-bot
    labels:
      app: ship-help-bot
    annotations:
      keel.sh/policy: force
      keel.sh/matchTag: "true"
      keel.sh/trigger: poll
      keel.sh/pollSchedule: "@every 5m"
  spec:
    replicas: 1
    revisionHistoryLimit: 2
    selector:
      matchLabels:
        app: ship-help-bot
    template:
      metadata:
        labels:
          app: ship-help-bot
      spec:
        serviceAccountName: ship-help-bot
        containers:
        - name: ship-help-bot
          image: quay.io/sgoeddel/ship-help-bot:latest
          imagePullPolicy: Always
          ports:
          - name: main
            containerPort: 8888
          - name: metrics
            containerPort: 9090
          volumeMounts:
          - name: gcp-credentials
            mountPath: /etc/gcp
            readOnly: true
          resources:
            requests:
              memory: "1Gi"
              cpu: "100m"
        volumes:
        - name: gcp-credentials
          secret:
            secretName: ship-help-bot-gcp-service-account
